# shroudb-stash

./: ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  ENGINE_DAG.md  README.md  TODOS.md  protocol.toml  shroudb-stash.md
.github/workflows/: release.yml
shroudb-stash-cli/: Cargo.toml
shroudb-stash-cli/src/: main.rs
shroudb-stash-client/: Cargo.toml
shroudb-stash-client/src/: connection.rs  error.rs  lib.rs
shroudb-stash-core/: Cargo.toml
shroudb-stash-core/src/: error.rs  metadata.rs
shroudb-stash-engine/: Cargo.toml
shroudb-stash-engine/src/: capabilities.rs  crypto.rs  engine.rs  lib.rs  object_store.rs  s3.rs
shroudb-stash-protocol/: Cargo.toml
shroudb-stash-protocol/src/: commands.rs  dispatch.rs  lib.rs  response.rs
shroudb-stash-server/: Cargo.toml
shroudb-stash-server/src/: cipher_embedded.rs  config.rs  main.rs  tcp.rs
shroudb-stash-server/tests/: integration.rs
shroudb-stash-server/tests/common/: mod.rs
