[workspace]
resolver = "3"
default-members = ["shroudb-stash-server"]
members = [
    "shroudb-stash-core",
    "shroudb-stash-engine",
    "shroudb-stash-protocol",
    "shroudb-stash-server",
    "shroudb-stash-client",
    "shroudb-stash-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-stash-core = { path = "shroudb-stash-core", version = "0.1.2", registry = "shroudb" }
shroudb-stash-engine = { path = "shroudb-stash-engine", version = "0.1.2", registry = "shroudb" }
shroudb-stash-protocol = { path = "shroudb-stash-protocol", version = "0.1.2", registry = "shroudb" }
shroudb-stash-client = { path = "shroudb-stash-client", version = "0.1.2", registry = "shroudb" }

# Commons
shroudb-acl = { version = "0.1.4", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.2.6", registry = "shroudb" }
shroudb-crypto = { version = "0.1.2", registry = "shroudb" }
shroudb-storage = { version = "0.2.13", registry = "shroudb" }
shroudb-store = { version = "0.1.2", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.1.0", registry = "shroudb" }
shroudb-server-tcp = { version = "0.1.0", registry = "shroudb" }
shroudb-server-bootstrap = { version = "0.1.0", registry = "shroudb" }
shroudb-client-common = { version = "0.1.0", registry = "shroudb" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Crypto
ring = "0.17"
zeroize = { version = "1", features = ["derive"] }

# S3
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
