[workspace]
resolver = "3"
default-members = ["shroudb-stash-server"]
members = [
    "shroudb-stash-core",
    "shroudb-stash-engine",
    "shroudb-stash-protocol",
    "shroudb-stash-server",
    "shroudb-stash-client",
    "shroudb-stash-cli",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.92"
license = "LicenseRef-Proprietary"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-stash-core = { path = "shroudb-stash-core", version = "0.7.0", registry = "shroudb" }
shroudb-stash-engine = { path = "shroudb-stash-engine", version = "0.7.0", registry = "shroudb" }
shroudb-stash-protocol = { path = "shroudb-stash-protocol", version = "0.7.0", registry = "shroudb" }
shroudb-stash-client = { path = "shroudb-stash-client", version = "0.7.0", registry = "shroudb" }

# Cipher (embedded in-process option for stash-server)
shroudb-cipher-engine = { version = "1.6.0", registry = "shroudb" }
shroudb-cipher-core = { version = "1.6.0", registry = "shroudb" }
shroudb-cipher-client = { version = "1.6.0", registry = "shroudb" }

# Commons
shroudb-acl = { version = "0.2.0", registry = "shroudb" }
shroudb-audit = { version = "0.1.0", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.11.0", registry = "shroudb" }
shroudb-crypto = { version = "0.1.4", registry = "shroudb" }
shroudb-storage = { version = "0.4.0", registry = "shroudb" }
shroudb-store = { version = "0.2.0", registry = "shroudb" }
shroudb-client = { version = "1.1.0", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.2.0", registry = "shroudb" }
shroudb-server-tcp = { version = "0.2.2", registry = "shroudb" }
tokio-rustls = "0.26"
shroudb-server-bootstrap = { version = "0.2.0", registry = "shroudb" }
shroudb-engine-bootstrap = { version = "0.3.0", registry = "shroudb" }
shroudb-client-common = { version = "0.2.0", registry = "shroudb" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Crypto
ring = "0.17"
zeroize = { version = "1", features = ["derive"] }

# S3
# Opt out of aws-sdk-s3's default `rustls` feature — it pulls in legacy rustls 0.21
# (transitively rustls-webpki 0.101.7) which is vulnerable to RUSTSEC-2026-0098/0099
# with no upstream patch on the 0.101.x line. `default-https-client` uses the
# modern rustls-aws-lc (rustls 0.23 + rustls-webpki 0.103.x).
aws-config = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-types = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Local override for the in-flight engine-bootstrap 0.3.0 release.
# This pulls the crate from the commons workspace checkout where 0.3.0
# is committed but not yet published to the `shroudb` registry. It is
# TEMPORARY — remove once shroudb-engine-bootstrap 0.3.0 is on the
# registry. Only this one crate is patched; every other registry dep
# must still resolve from the registry so type-identity stays unified
# with published downstream crates (see engine-bootstrap/Cargo.toml).
[patch.shroudb]
shroudb-engine-bootstrap = { path = "../commons/shroudb-engine-bootstrap" }
