[package]
name = "shroudb-stash-cli"
description = "CLI tool for the Stash encrypted blob storage engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-stash-cli"
path = "src/main.rs"

[dependencies]
shroudb-stash-client.workspace = true

tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
base64.workspace = true
