[package]
name = "shroudb-stash-client"
description = "Rust client SDK for the Stash encrypted blob storage engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-client-common.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
