[package]
name = "shroudb-stash-engine"
description = "Encrypted blob storage engine with S3 backend and envelope encryption"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["s3"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-types"]

[dependencies]
shroudb-stash-core.workspace = true
shroudb-acl.workspace = true
shroudb-audit.workspace = true
shroudb-chronicle-core.workspace = true
shroudb-crypto.workspace = true
shroudb-store.workspace = true
shroudb-server-bootstrap.workspace = true

ring.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true

# S3 (optional, behind feature flag)
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }

tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
shroudb-storage = { workspace = true, features = ["testing"] }
